# 2gpu-local-ai-workstation

./: .gitignore  .gitmodules  .rooignore  AGENTS.md  README.md  bench-results.csv  bench-rocm-vs-vulkan.csv
archive/library_and_patron/: .gitignore  .gitmodules  README.md  pyproject.toml
archive/library_and_patron/.cursor/: hooks.json
archive/library_and_patron/.github/hooks/: reinicorn.json
archive/library_and_patron/.reinicorn/hooks/: enforce-doc-templates.sh
archive/library_and_patron/archive/v1-code-oriented/: AGENTS.md  ARCHITECTURE_DECISIONS.md  CONTEXT.md  LIBRARIAN_BUILD_PLAN.md  README.md  SESSION_MANAGER_BUILD_PLAN.md  TEST_PLAN.md  install.sh  pyproject.toml
archive/library_and_patron/archive/v1-code-oriented/harness/library_and_patron/: golden-principles.md  quality-scores.md
archive/library_and_patron/archive/v1-code-oriented/librarian/: embedder.py  gpu_detect.py  indexer.py  repo_detector.py  server.py  store.py  watcher.py
archive/library_and_patron/archive/v1-code-oriented/session_manager/: manager.py
archive/library_and_patron/archive/v1-code-oriented/systemd/: ai-session-sudoers  ai-session.service  librarian.service  ollama-gpu0.service  ollama-gpu1.service
archive/library_and_patron/archive/v1-code-oriented/tests/: auto_test.py  manual_checklist.md
archive/library_and_patron/docs/: brainstorm-2026-04-22-offload-and-profiles.md  opencode-responses-2026-04-22.md  test-plan.md
archive/library_and_patron/librarian/: cache.py  embedder.py  server.py
archive/library_and_patron/tests/: test_mine_file_e2e.py  test_strategy_dispatch.py
(+218 files in other folders)
