[project]
name = "librarian"
version = "0.2.0"
description = "Librarian — ad-hoc file retrieval MCP. Mine any file, get only what matters."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=0.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["librarian*"]
exclude = ["archive*", "tests*"]

[project.scripts]
librarian = "librarian.server:main"
